# site-with-ai-chat

./: .env.example  .gitignore  BRIEF.md  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py  store.py
backend/app/agent/: agent.py  llm.py  llm_azure_kimi.py  llm_infomaniak_apertus.py  tools.py
backend/app/routes/: chat.py  health.py  recipes.py
backend/site_with_ai_chat_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_recipes.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  RecipeList.tsx
frontend/lib/: api.ts
