[project]
name = "site-with-ai-chat-backend"
version = "0.1.0"
description = "FastAPI backend with stub chat endpoint for student to implement"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "langchain>=1.2,<2.0",
    "langchain-azure-ai>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "azure-ai-inference>=1.0.0b9",
    "pytest>=8.0",
    "httpx>=0.27",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
